--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This is the page for my portfolio, hello!</p>
+</section>
 </body>
 </html>
