--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <section class="CryingGraph">
  <h3>
-<a class="anchor" href="#Pimple"></a>Amount of Times Cried</h3>
+<a class="anchor" href="#Crying"></a>Amount of Times Cried</h3>
 <script type="text/javascript">
   
 			//Width and height
@@ -163,6 +163,68 @@
 		</script>
 		<p>As you can see, I have cried more than you have cried...Didn't really expect that outcome</p>
 		<iframe width="560" height="315" src="//www.youtube.com/embed/ee925OTFBCA" frameborder="0" allowfullscreen></iframe>
+		<p>I am basically just like that.</p>
+</section>
+
+<section class="NippleGraph">
+ <h3>
+<a class="anchor" href="#Nipple"></a>Amount of Nipples</h3>
+<script type="text/javascript">
+  
+			//Width and height
+			var w = 500;
+			var h = 100;
+			var barPadding = 100;
+			
+			var dataset = [ 3, 2];
+			
+			//Create SVG element
+			var svg = d3.select("section.NippleGraph")
+						.append("svg")
+						.attr("width", w)
+						.attr("height", h);
+
+			svg.selectAll("rect")
+			   .data(dataset)
+			   .enter()
+			   .append("rect")
+			   .attr("x", function(d, i) {
+			   		return i * (w / dataset.length);
+			   })
+			   .attr("y", function(d) {
+			   		return h - (d * 4);
+			   })
+			   .attr("width", w / 10 )
+			   .attr("height", function(d) {
+			   		return d * 4;
+			   })
+			   .attr("fill", function(d) {
+					return "rgb(0, 0, " + (d * 10) + ")";
+			   });
+
+			svg.selectAll("text")
+			   .data(dataset)
+			   .enter()
+			   .append("text")
+			   .text(function(d) {
+			   		return d;
+			   })
+			   .attr("text-anchor", "middle")
+			   .attr("x", function(d, i) {
+			   		return i * (w / dataset.length) + (w / dataset.length - barPadding) / 2;
+			   })
+			   .attr("y", function(d) {
+			   		return h-50;
+			   })
+			   .attr("font-family", "sans-serif")
+			   .attr("font-size", "25px")
+			   .attr("fill", "red");
+
+
+			
+		</script>
+		<p>I Win Again</p>
+		<iframe width="420" height="315" src="//www.youtube.com/embed/CVke__4OZ-0" frameborder="0" allowfullscreen></iframe>
 </section>
 
 </body>
