--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 			
 		</script>
 		<p>Ah, here's a more even match up between the two of us.  We are both really weird, really weird... <em><b>REALLY</b></em> weird.
-		I mean, who would quote this? </p>
+		I mean, who would quote <a title="One time I nibbled on a piece of cheese and my cholesterol went up to 900.">this?</a> </p>
 		<iframe width="560" height="315" src="//www.youtube.com/embed/VF9-sEbqDvU" frameborder="0" allowfullscreen></iframe>
 		<p>"See, you're weird. But I am too, so that's great."</p>
 		</section>
