Added stuff you like

--- a/index.html
+++ b/index.html
@@ -347,11 +347,27 @@
 		<p>Ah, here's a more even match up between the two of us.  We are both really weird, really weird... <em><b>REALLY</b></em> weird.
 		I mean, who would quote <a title="One time I nibbled on a piece of cheese and my cholesterol went up to 900.">this?</a> </p>
 		<iframe width="560" height="315" src="//www.youtube.com/embed/VF9-sEbqDvU" frameborder="0" allowfullscreen></iframe>
-		<p>"See, you're weird."</p>
+		<p>See, you're weird.</p>
 		</br>
-		<p>But I'm also weird."</p>
+		<p>But I'm also weird.</p>
 		<iframe width="420" height="315" src="//www.youtube.com/embed/SnqaqULg0is" frameborder="0" allowfullscreen></iframe>
 		</section>
+		
+	<section>
+		<h1>Stuff that you like that I do</h1>
+	</section>
+	<section>
+		<h3>Black & White...But Mostly White</h3>
+		<p>One thing that you say you like is how straight-forward I am about things.
+		(You've even exploited this for <a href="http://www.reddit.com/r/AskReddit/comments/1fxo0h/what_little_quirk_do_you_secretly_love_about_your/caf0iwm">karma</a>...sweet, precious karma).
+		But it's not alwasy the best way to go about things.
+		</p>
+		<img src="pics/useless.jpg" title="MATH NEVER TAUGHT ME HOW TO GIRL"/>
+		
+		<p>I have always been analytical about things, I like having <i>proof</i>, I like being
+		able to <i> know</i> exactly how to do something.  If there's not a definitive way to something, then I freak out sometimes.  But not everything can be seen in black and white, but that won't stop me from trying.
+		I've gotten better at this throughout the relationship, but it still comes up once in a while.</p>
+	</section>
 
 </body>
 </html>
