Added Our Relationship

--- a/index.html
+++ b/index.html
@@ -369,6 +369,14 @@
 		able to <i> know</i> exactly how to do something.  If there's not a definitive way to something, then I freak out sometimes.  But not everything can be seen in black and white, but that won't stop me from trying.
 		I've gotten better at this throughout the relationship, but it still comes up once in a while.</p>
 	</section>
+	
+	<section>
+		<h1>Our Relationship</h1>
+		<h3>A Good Description of Our Relationship</h3>
+		<img src="pics/rain.jpg" title="John Green never lets me down."/>
+		<p>I think this picture sums us up pretty well.  You constantly blow me out of the water with everything
+		that you do.</p>
+	</section>
 
 </body>
 </html>
