--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 		<h3>Black & White...But Mostly White</h3>
 		<p>One thing that you say you like is how straight-forward I am about things.
 		(You've even exploited this for <a href="http://www.reddit.com/r/AskReddit/comments/1fxo0h/what_little_quirk_do_you_secretly_love_about_your/caf0iwm">karma</a>...sweet, precious karma).
-		But it's not alwasy the best way to go about things.
+		But it's not always the best way to go about things.
 		</p>
 		<img src="pics/useless.jpg" title="MATH NEVER TAUGHT ME HOW TO GIRL"/>
 		
