--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <h1>HELLO LINDSAY!</h1>
         <p>Website started 8/11/2013</p>
-		<p>Website last updated 8/18/2013</p>
+		<p>Website last updated 8/30/2013</p>
 
 
         <p class="view"><a href="https://github.com/jtkilleen">View My GitHub Profile</a></p>
@@ -115,7 +115,7 @@
 			var h = 100;
 			var barPadding = 100;
 			
-			var dataset = [ 19, 3];
+			var dataset = [ 23, 3];
 			
 			//Create SVG element
 			var svg = d3.select("section.CryingGraph")
@@ -376,6 +376,12 @@
 		<img src="pics/rain.jpg" title="John Green never lets me down."/>
 		<p>I think this picture sums us up pretty well.  You constantly blow me out of the water with everything
 		that you do.</p>
+		<h3>August 28, 2013</h3>
+		<p>This date wi</p>
+		<h3>Part II</h3>
+		<p>And now, we begin part two of the relationship.  Where will this take us?
+		I don't really know, but I can't wait to find out.  But the most important thing
+		is that you're going to be right beside me for this.</p>
 	</section>
 
 </body>
