fixed Grammar mistake

--- a/index.html
+++ b/index.html
@@ -377,7 +377,8 @@
 		<p>I think this picture sums us up pretty well.  You constantly blow me out of the water with everything
 		that you do.</p>
 		<h3>August 28, 2013</h3>
-		<p>This date wi</p>
+		<p>This date will probably be important to remember.  All I'm going to say is
+		that I had to really update one of those graphs.  Also, I love you.</p>
 		<h3>Part II</h3>
 		<p>And now, we begin part two of the relationship.  Where will this take us?
 		I don't really know, but I can't wait to find out.  But the most important thing
