Updated site, finally

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>HELLO LINDSAY!</h1>
-        <p>Website started 8/11/2013</p>
+        <p>Website started 1/10/2014</p>
 		<p>Website last updated 8/30/2013</p>
 
 
@@ -383,6 +383,26 @@
 		<p>And now, we begin part two of the relationship.  Where will this take us?
 		I don't really know, but I can't wait to find out.  But the most important thing
 		is that you're going to be right beside me for this.</p>
+	</section>
+	
+	<section>
+		<h1>Uruguay</h1>
+		<h3>Before you go, here are some thoughts</h3>
+		<p>Man, I really haven't been updating this site.  This semester was kinda crazy for the both of us
+			with the hell that is pledging and all.  But it also made me realize how much I love.  And just
+			as we start to get comfortable with where we are, you are going to be leaving the country for
+			four months.  That's like a third of our relationship that your are going to be gone! It makes
+			me sad that you will be leaving me for such a long time but I won't let it affect me too much.  You know
+			why? It's because I know that you are going to have a new experience in your life and you are going to have
+			more fun than it is possible to have in Abilene (I know shocker right?). But most important of all, I know that you will be back.
+			I know that this is only temporary.  And at the end of the semester, if anything, I know that our
+			relationship will be stronger than ever.
+		</p>
+		
+		<p>
+			Here's a video to make you smile before you leave me for awhile, how corny.
+			<iframe width="560" height="315" src="//www.youtube.com/embed/iTy9WD9ogd4" frameborder="0" allowfullscreen></iframe>
+		</p>
 	</section>
 
 </body>
